force-app/main/default/objects/RIA_Sync_Run__c/RIA_Sync_Run__c.object-meta.xml
<CustomObject>
    <label>RIA Sync Run</label>
    <pluralLabel>RIA Sync Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Run Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>