force-app/main/default/objects/RIA_Sync_Run__c/fields/Edges_Upserted__c.field-meta.xml
<CustomField>
    <fullName>Edges_Upserted__c</fullName>
    <label>Edges Upserted</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>