force-app/main/default/objects/RIA_Sync_Run__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
</CustomField>