force-app/main/default/objects/RIA_Sync_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
</CustomField>